[tool.poetry]
name = "rl_env"
version = "0.1.0"
description = "DQN/Rainbow"
authors = ["Hugo DEBES"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gymnasium = {extras = ["atari"], version = "^0.27.1"}
torch = "^1.13.1"
matplotlib = "^3.7.0"
msgpack = "^1.0.4"
tensorboard = "^2.12.0"
gym = {extras = ["atari"], version = "^0.26.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"